<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#16EC1F"
    android:id="@+id/input_layout_name"
    tools:context=".ui.EventAddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">


        <ImageView
            android:id="@+id/event_img"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="24dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/event_image"
            android:src="@drawable/ic_add_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/event_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/event_name_req"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_img">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true"
                android:textColorHint="#616161" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/event_date_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/event_date_req"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_name_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/event_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="date|textCapWords"
                android:singleLine="true"
                android:textColorHint="#616161" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/event_description_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/event_description_req"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_date_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/event_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/event_whatsapp_link_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/event_whatsapp_link_req"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_description_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/event_whatsapp_link"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/event_organizer_phone_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/event_organizer_phone_req"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_whatsapp_link_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/event_organizer_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/save_action"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_organizer_phone_label" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>